[3] Added SMS settings

--- a/src/Presentation/Nop.Web/Administration/sitemap.config
+++ b/src/Presentation/Nop.Web/Administration/sitemap.config
@@ -77,6 +77,7 @@
             <siteMapNode title="News settings" nopResource="Admin.Configuration.Settings.News" controller="Setting" action="News" />
             <siteMapNode title="Forums settings" nopResource="Admin.Configuration.Settings.Forums" controller="Setting" action="Forum" />
             <siteMapNode title="Vendor settings" nopResource="Admin.Configuration.Settings.Vendor" controller="Setting" action="Vendor" />
+            <siteMapNode title="SMS settings" nopResource="Admin.Configuration.Settings.SMS" controller="Setting" action="SMS" />
             <siteMapNode title="All settings (settings)" nopResource="Admin.Configuration.Settings.AllSettings" controller="Setting" action="AllSettings"/>
           </siteMapNode>
           <siteMapNode title="Stores" nopResource="Admin.Configuration.Stores" PermissionNames="ManageStores" controller="Store" action="List"/>
