--- a/src/Presentation/Nop.Web/Administration/Nop.Admin.csproj
+++ b/src/Presentation/Nop.Web/Administration/Nop.Admin.csproj
@@ -211,6 +211,9 @@
     <Compile Include="Models\Orders\CountryReportLineModel.cs" />
     <Compile Include="Models\Orders\CountryReportModel.cs" />
     <Compile Include="Models\Payments\PaymentMethodRestrictionModel.cs" />
+    <Compile Include="Models\Settings\SMSSettingsModel.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Models\Settings\VendorSettingsModel.cs" />
     <Compile Include="Models\Shipping\WarehouseModel.cs" />
     <Compile Include="Models\Shipping\DeliveryDateModel.cs" />
@@ -1209,6 +1212,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Order\CountryReport.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Setting\SMS.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
