--- a/src/Libraries/Nop.Services/Nop.Services.csproj
+++ b/src/Libraries/Nop.Services/Nop.Services.csproj
@@ -198,6 +198,10 @@
     <Compile Include="Helpers\UserAgentHelper.cs" />
     <Compile Include="Logging\ClearLogTask.cs" />
     <Compile Include="Media\ResizeType.cs" />
+    <Compile Include="Messages\BytehandSMSSender.cs" />
+    <Compile Include="Messages\IPhoneNumberFormatter.cs" />
+    <Compile Include="Messages\ISMSSender.cs" />
+    <Compile Include="Messages\PhoneNumberFormatter.cs" />
     <Compile Include="Shipping\EventPublisherExtensions.cs" />
     <Compile Include="Vendors\VendorService.cs" />
     <Compile Include="Vendors\IVendorService.cs" />
