--- a/src/Presentation/Nop.Web/Administration/sitemap.config
+++ b/src/Presentation/Nop.Web/Administration/sitemap.config
@@ -78,7 +78,7 @@
             <siteMapNode title="Forums settings" nopResource="Admin.Configuration.Settings.Forums" controller="Setting" action="Forum" />
             <siteMapNode title="Vendor settings" nopResource="Admin.Configuration.Settings.Vendor" controller="Setting" action="Vendor" />
             <siteMapNode title="SMS settings" nopResource="Admin.Configuration.Settings.SMS" controller="Setting" action="SMS" />
-            <siteMapNode title="Dynamic prices" nopResource="Admin.Configuation.Settings.DynamicPrice" controller="Setting" action="DynamicPrice" />
+            <siteMapNode title="Dynamic prices" nopResource="Admin.Configuration.Settings.DynamicPrice" controller="Setting" action="DynamicPrice" />
             <siteMapNode title="All settings (settings)" nopResource="Admin.Configuration.Settings.AllSettings" controller="Setting" action="AllSettings"/>
           </siteMapNode>
           <siteMapNode title="Stores" nopResource="Admin.Configuration.Stores" PermissionNames="ManageStores" controller="Store" action="List"/>
