--- a/src/Plugins/Nop.Plugin.Payments.Robokassa/Nop.Plugin.Payments.Robokassa.csproj
+++ b/src/Plugins/Nop.Plugin.Payments.Robokassa/Nop.Plugin.Payments.Robokassa.csproj
@@ -100,6 +100,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\robokassa.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Description.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
